Holz Motors Finalizado

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
         <div class="d-flex">
             <div class="card" style="width: 18rem;">
-                <img src="https://bmwmotostopcar.com.br/fmanager/grupotopcar2019/galeria_motos_novos/t/imagem1214_2.jpg"
+                <img src="./cards/bmw1.jpg"
                     class="card-img-top" alt="Moto1">
                 <div class="card-body">
                     <h5 class="card-title">BMW G 310 GS Rallye</h5>
@@ -160,7 +160,7 @@
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="https://bmwmotostopcar.com.br/fmanager/grupotopcar2019/galeria_motos_novos/t/imagem1228_2.jpg"
+                <img src="./cards/bmw2.jpg"
                     class="card-img-top" alt="Moto2">
                 <div class="card-body">
                     <h5 class="card-title">BMW G 310 GS</h5>
@@ -222,7 +222,7 @@
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="https://bmwmotostopcar.com.br/fmanager/grupotopcar2019/galeria_motos_novos/t/imagem954_2.jpg"
+                <img src="./cards/bmw3.jpg"
                     class="card-img-top" alt="Moto3">
                 <div class="card-body">
                     <h5 class="card-title">BMW S 1000 RR Premium</h5>
@@ -284,7 +284,7 @@
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="https://bmwmotostopcar.com.br/fmanager/grupotopcar2019/galeria_motos_novos/t/imagem1360_2.jpg"
+                <img src="./cards/bmw4.jpg"
                     class="card-img-top" alt="Moto4">
                 <div class="card-body">
                     <h5 class="card-title">BMW R 1250 RT Option 719</h5>
@@ -352,7 +352,7 @@
         <div class="d-flex"
             style="margin-top: 20px; margin-bottom: 20px; justify-content: space-around; flex-wrap: wrap;">
             <div class="card" style="width: 18rem;">
-                <img src="https://bmwmotostopcar.com.br/fmanager/grupotopcar2019/galeria_motos_novos/t/imagem1311_2.jpg"
+                <img src="./cards/bmw5.jpg"
                     class="card-img-top" alt="Moto5">
                 <div class="card-body">
                     <h5 class="card-title">BMW G 310 R Street Premium Plus</h5>
@@ -414,7 +414,7 @@
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="https://bmwmotostopcar.com.br/fmanager/grupotopcar2019/galeria_motos_novos/t/imagem1123_2.jpg"
+                <img src="./cards/bmw6.jpg"
                     class="card-img-top" alt="Moto6">
                 <div class="card-body">
                     <h5 class="card-title">BMW F 750 GS Premium 40 Anos</h5>
@@ -475,7 +475,7 @@
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="https://bmwmotostopcar.com.br/fmanager/grupotopcar2019/galeria_motos_novos/t/imagem1236_2.jpg"
+                <img src="./cards/bmw7.jpg"
                     class="card-img-top" alt="Moto7">
                 <div class="card-body">
                     <h5 class="card-title">BMW F 850 GS Premium Plus</h5>
@@ -535,7 +535,7 @@
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="https://bmwmotostopcar.com.br/fmanager/grupotopcar2019/galeria_motos_novos/t/imagem1349_2.jpg"
+                <img src="./cards/bmw8.jpg"
                     class="card-img-top" alt="Moto8">
                 <div class="card-body">
                     <h5 class="card-title">BMW F 850 GS ADV Premium 40 Anos</h5>
