--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-danger">
         <div class="container-fluid">
-            <img src="https://dewey.tailorbrands.com/production/brand_version_mockup_image/494/6278559494_5f4b1427-6a22-4840-9422-b66e48c9828a.png?cb=1635438368"
+            <img src="./assets/logo.png"
                 alt="Logo">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -73,15 +73,15 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="https://www.bmw-motorrad.com.br/content/dam/bmwmotorradnsc/marketBR/bmw-motorrad_com_br/varejo/g310gs_varejo_agosto_1600x700.jpg.asset.1628000057505.jpg"
+                    <img src="./assets/banner1.jpg"
                         class="d-block w-100" alt="banner">
                 </div>
                 <div class="carousel-item">
-                    <img src="https://www.bmw-motorrad.com.br/content/dam/bmwmotorradnsc/marketBR/bmw-motorrad_com_br/varejo/varejo-lineup.jpg.asset.1594389406792.jpg"
+                    <img src="./assets/banner2.webp"
                         class="d-block w-100" alt="banner">
                 </div>
                 <div class="carousel-item">
-                    <img src="https://www.bmw-motorrad.com.br/content/dam/bmwmotorradnsc/marketBR/bmw-motorrad_com_br/varejo/f850gs_premium%20_plus_1600x700.jpg"
+                    <img src="./assets/banner3.webp"
                         class="d-block w-100" alt="banner">
                 </div>
             </div>
@@ -599,7 +599,7 @@
 
     <footer>
         <div id="logo">
-            <img src="https://dewey.tailorbrands.com/production/brand_version_mockup_image/494/6278559494_5f4b1427-6a22-4840-9422-b66e48c9828a.png?cb=1635438368"
+            <img src="./assets/logo.png"
                 alt="Holz Motors">
         </div>
 
