Holz Motors Finalizado

--- a/index.html
+++ b/index.html
@@ -116,8 +116,12 @@
                         <div class="offcanvas-body">
                             Itens do Carrinho:
 
-                            <div id="offcanva-img">
+                            <div class="offcanva-img">
                                 <img src="./cards/bmw1.jpg" alt="">
+                            </div>
+
+                            <div>
+                                <h6>Valor Total: R$ 35.900,00</h6>
                             </div>
                             <div id="botoes">
                                 <button type="button" class="btn btn-success w-100" id="#finaliza">Finalizar
@@ -172,23 +176,6 @@
                     <button class="btn btn-dark w-100" type="button" data-bs-toggle="offcanvas"
                         data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" id="botao-card">Adicionar ao Carrinho</button>
 
-                    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight"
-                        aria-labelledby="offcanvasRightLabel">
-                        <div class="offcanvas-header">
-                            <h5 id="offcanvasRightLabel">Carrinho</h5>
-                            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
-                                aria-label="Close"></button>
-                        </div>
-                        <div class="offcanvas-body">
-                            Itens do Carrinho:
-
-                            <button type="button" class="btn btn-success w-100">Finalizar
-                                Compra</button>
-                            <a href="./index.html"><button type="button" class="btn btn-dark w-100">Continuar
-                                    Comprando</button></a>
-                        </div>
-                    </div>
-
                     <!-- Modal -->
                     <div class="modal fade" id="modal2" tabindex="-1" aria-labelledby="modal2Label" aria-hidden="true">
                         <div class="modal-dialog">
@@ -233,23 +220,6 @@
                     <button class="btn btn-dark w-100" type="button" data-bs-toggle="offcanvas"
                         data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" id="botao-card">Adicionar ao Carrinho</button>
 
-                    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight"
-                        aria-labelledby="offcanvasRightLabel">
-                        <div class="offcanvas-header">
-                            <h5 id="offcanvasRightLabel">Carrinho</h5>
-                            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
-                                aria-label="Close"></button>
-                        </div>
-                        <div class="offcanvas-body">
-                            Itens do Carrinho:
-
-                            <button type="button" class="btn btn-success w-100">Finalizar
-                                Compra</button>
-                            <a href="./index.html"><button type="button" class="btn btn-dark w-100">Continuar
-                                    Comprando</button></a>
-                        </div>
-                    </div>
-
                     <!-- Modal -->
                     <div class="modal fade" id="model3" tabindex="-1" aria-labelledby="model3Label" aria-hidden="true">
                         <div class="modal-dialog">
@@ -293,23 +263,6 @@
                     </button>
                     <button class="btn btn-dark w-100" type="button" data-bs-toggle="offcanvas"
                         data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" id="botao-card">Adicionar ao Carrinho</button>
-
-                    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight"
-                        aria-labelledby="offcanvasRightLabel">
-                        <div class="offcanvas-header">
-                            <h5 id="offcanvasRightLabel">Carrinho</h5>
-                            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
-                                aria-label="Close"></button>
-                        </div>
-                        <div class="offcanvas-body">
-                            Itens do Carrinho:
-
-                            <button type="button" class="btn btn-success w-100">Finalizar
-                                Compra</button>
-                            <a href="./index.html"><button type="button" class="btn btn-dark w-100">Continuar
-                                    Comprando</button></a>
-                        </div>
-                    </div>
 
                     <!-- Modal -->
                     <div class="modal fade" id="model4" tabindex="-1" aria-labelledby="model4Label" aria-hidden="true">
@@ -360,23 +313,6 @@
                     <button class="btn btn-dark w-100" type="button" data-bs-toggle="offcanvas"
                         data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" id="botao-card">Adicionar ao Carrinho</button>
 
-                    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight"
-                        aria-labelledby="offcanvasRightLabel">
-                        <div class="offcanvas-header">
-                            <h5 id="offcanvasRightLabel">Carrinho</h5>
-                            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
-                                aria-label="Close"></button>
-                        </div>
-                        <div class="offcanvas-body">
-                            Itens do Carrinho:
-
-                            <button type="button" class="btn btn-success w-100">Finalizar
-                                Compra</button>
-                            <a href="./index.html"><button type="button" class="btn btn-dark w-100">Continuar
-                                    Comprando</button></a>
-                        </div>
-                    </div>
-
                     <!-- Modal -->
                     <div class="modal fade" id="model5" tabindex="-1" aria-labelledby="model5Label" aria-hidden="true">
                         <div class="modal-dialog">
@@ -420,24 +356,7 @@
                     </button>
                     <button class="btn btn-dark w-100" type="button" data-bs-toggle="offcanvas"
                         data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" id="botao-card">Adicionar ao Carrinho</button>
-
-                    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight"
-                        aria-labelledby="offcanvasRightLabel">
-                        <div class="offcanvas-header">
-                            <h5 id="offcanvasRightLabel">Carrinho</h5>
-                            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
-                                aria-label="Close"></button>
-                        </div>
-                        <div class="offcanvas-body">
-                            Itens do Carrinho:
-
-                            <button type="button" class="btn btn-success w-100">Finalizar
-                                Compra</button>
-                            <a href="./index.html"><button type="button" class="btn btn-dark w-100">Continuar
-                                    Comprando</button></a>
-                        </div>
-                    </div>
-
+               
                     <!-- Modal -->
                     <div class="modal fade" id="model6" tabindex="-1" aria-labelledby="model6Label" aria-hidden="true">
                         <div class="modal-dialog">
@@ -481,23 +400,6 @@
                     <button class="btn btn-dark w-100" type="button" data-bs-toggle="offcanvas"
                         data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" id="botao-card">Adicionar ao Carrinho</button>
 
-                    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight"
-                        aria-labelledby="offcanvasRightLabel">
-                        <div class="offcanvas-header">
-                            <h5 id="offcanvasRightLabel">Carrinho</h5>
-                            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
-                                aria-label="Close"></button>
-                        </div>
-                        <div class="offcanvas-body">
-                            Itens do Carrinho:
-
-                            <button type="button" class="btn btn-success w-100">Finalizar
-                                Compra</button>
-                            <a href="./index.html"><button type="button" class="btn btn-dark w-100">Continuar
-                                    Comprando</button></a>
-                        </div>
-                    </div>
-
                     <!-- Modal -->
                     <div class="modal fade" id="model7" tabindex="-1" aria-labelledby="model7Label" aria-hidden="true">
                         <div class="modal-dialog">
@@ -539,24 +441,7 @@
                     </button>
                     <button class="btn btn-dark w-100" type="button" data-bs-toggle="offcanvas"
                         data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" id="botao-card">Adicionar ao Carrinho</button>
-
-                    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight"
-                        aria-labelledby="offcanvasRightLabel">
-                        <div class="offcanvas-header">
-                            <h5 id="offcanvasRightLabel">Carrinho</h5>
-                            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
-                                aria-label="Close"></button>
-                        </div>
-                        <div class="offcanvas-body">
-                            Itens do Carrinho:
-
-                            <button type="button" class="btn btn-success w-100">Finalizar
-                                Compra</button>
-                            <a href="./index.html"><button type="button" class="btn btn-dark w-100">Continuar
-                                    Comprando</button></a>
-                        </div>
-                    </div>
-
+              
                     <!-- Modal -->
                     <div class="modal fade" id="model8" tabindex="-1" aria-labelledby="model8Label" aria-hidden="true">
                         <div class="modal-dialog">
