--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             <div class="card" style="width: 18rem;">
                 <img src="./cards/bmw3.jpg" class="card-img-top" alt="Moto3">
                 <div class="card-body">
-                    <h5 class="card-title">BMW S 1000 RR Premium</h5>
+                    <h5 class="card-title">BMW S 1000 RR </h5>
                     <p class="card-text">R$ 113.700,00</p>
                     <!-- Button trigger modal -->
                     <button type="button" class="btn btn-dark w-100" data-bs-toggle="modal" data-bs-target="#model3"
@@ -254,7 +254,7 @@
             <div class="card" style="width: 18rem;">
                 <img src="./cards/bmw4.jpg" class="card-img-top" alt="Moto4">
                 <div class="card-body">
-                    <h5 class="card-title">BMW R 1250 RT Option 719</h5>
+                    <h5 class="card-title">BMW R 1250 RT </h5>
                     <p class="card-text">R$ 181.500,00</p>
                     <!-- Button trigger modal -->
                     <button type="button" class="btn btn-dark w-100" data-bs-toggle="modal" data-bs-target="#model4"
